# energy-analysis

./: .gitignore  .pre-commit-config.yaml  AI_USAGE.md  Makefile  README.md  pyproject.toml  run_analysis.py  run_fetcher.py  run_pipeline.py  run_processor.py
config/: config.yaml
dashboards/: app.py
data/processed/: chicago_cleaned.csv  correlation_matrix.csv  data_quality_report.csv  geographic_overview.csv  heatmap_matrix.csv  houston_cleaned.csv  houston_quality_report.csv  merged_data.csv  new_york_cleaned.csv  phoenix_cleaned.csv  seasonal_pattern_summary.csv  seattle_cleaned.csv  seattle_quality_report.csv  weekday_weekend_summary.csv
data/raw/: energy_last_90_days.csv  weather_last_90_days.csv
data/raw/energy/: Chicago_energy_90_days.csv  Houston_energy_90_days.csv  New_York_energy_90_days.csv  Phoenix_energy_90_days.csv  Seattle_energy_90_days.csv  energy_2025-07-06.csv
data/raw/weather/: Chicago_weather_90_days.csv  Houston_weather_90_days.csv  New_York_weather_90_days.csv  Phoenix_weather_90_days.csv  Seattle_weather_90_days.csv  weather_2025-07-06.csv
src/: analysis.py  data_fetcher.py  data_processor.py  pipeline.py
tests/: test_analysis.py  test_data_fetcher.py  test_data_processor.py  test_pipeline.py
